[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/PlayerControl.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Placeholder/UI/ui_control_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Placeholder/UI/ui_control_2.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]


[sub_resource type="CircleShape2D" id=2]


[sub_resource type="CircleShape2D" id=3]

radius = 53.8294

[sub_resource type="CircleShape2D" id=4]

radius = 21.957

[node name="PlayerControl" type="Node2D"]
script = ExtResource( 1 )

[node name="Center_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Center_area"]
visible = false
shape = SubResource( 1 )

[node name="Input_area" type="Area2D" parent="."]
position = Vector2( 211.953, 6.58611 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Input_area"]
visible = false
shape = SubResource( 2 )

[node name="Outside_area" type="Area2D" parent="."]

[node name="Outside_collider" type="CollisionShape2D" parent="Outside_area"]
visible = false
shape = SubResource( 3 )

[node name="Outside_sprite" type="Sprite" parent="Outside_area"]
texture = ExtResource( 2 )

[node name="Inside_area" type="Area2D" parent="."]

[node name="Inside_collider" type="CollisionShape2D" parent="Inside_area"]
visible = false
shape = SubResource( 4 )

[node name="Inside_sprite" type="Sprite" parent="Inside_area"]
texture = ExtResource( 3 )
hframes = 2

[node name="Positions" type="Node2D" parent="."]
editor/display_folded = true

[node name="North" type="Position2D" parent="Positions"]
position = Vector2( 0, -40 )

[node name="NorthEast" type="Position2D" parent="Positions"]
position = Vector2( 30, -30 )

[node name="NorthWest" type="Position2D" parent="Positions"]
position = Vector2( -30, -30 )

[node name="South" type="Position2D" parent="Positions"]
position = Vector2( 0, 40 )

[node name="SouthEast" type="Position2D" parent="Positions"]
position = Vector2( 30, 30 )

[node name="SouthWest" type="Position2D" parent="Positions"]
position = Vector2( -30, 30 )

[node name="East" type="Position2D" parent="Positions"]
position = Vector2( 40, 0 )

[node name="West" type="Position2D" parent="Positions"]
position = Vector2( -40, 0 )

[node name="Origin" type="Position2D" parent="Positions"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerDrag" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

